# fdmep

./: .gitignore  README.md  config.yaml  pyproject.toml
src/fdmep/: cli.py  scaffolder.py
